playlist update on 07/04/21:\n diff --git a/ytube/_data/lists/chill-deep-keys.yml b/ytube/_data/lists/chill-deep-keys.yml index b2ff5fc..eaf9d68 100644 --- a/ytube/_data/lists/chill-deep-keys.yml +++ b/ytube/_data/lists/chill-deep-keys.yml @@ -4,0 +5 @@ +- Iau3RDSn5o4 # Take It Easy ' Best Of Vocal Deep House Mix [Vol.5] diff --git a/ytube/_data/lists/medit-keys.yml b/ytube/_data/lists/medit-keys.yml index c888534..c203555 100644 --- a/ytube/_data/lists/medit-keys.yml +++ b/ytube/_data/lists/medit-keys.yml @@ -23,0 +24 @@ +- T9DsqFfqwY0 # Buddha's Flute: Speace to Breathe 2 diff --git a/ytube/_data/lists/music-keys.yml b/ytube/_data/lists/music-keys.yml index d7be5ad..488a5d1 100644 --- a/ytube/_data/lists/music-keys.yml +++ b/ytube/_data/lists/music-keys.yml @@ -1171,0 +1172 @@ +- boqLC9qgEM8 # Nancy Sinatra - Bang Bang (My baby shot me down) diff --git a/ytube/_data/lists/new-age-keys.yml b/ytube/_data/lists/new-age-keys.yml index 5dd8502..a47f5eb 100644 --- a/ytube/_data/lists/new-age-keys.yml +++ b/ytube/_data/lists/new-age-keys.yml @@ -9,0 +10 @@ +- UWG7iRxRNLM # Namaste: Devi Prayer, Hindu, Spiritual music, gentle, calming, peaceful music, relaxing music @@ -19,0 +21 @@ +- sGJwoluF-HI # Jakare - Apu (Remixes) [Organic House | Shamanic Downtempo] diff --git a/ytube/_data/lists/tango-experimental-keys.yml b/ytube/_data/lists/tango-experimental-keys.yml index 2485f5d..f7ea909 100644 --- a/ytube/_data/lists/tango-experimental-keys.yml +++ b/ytube/_data/lists/tango-experimental-keys.yml @@ -169,0 +170 @@ +- GOI17-4J-I8 # Yann Tiersen - Comptine d'un Autre été l'après-midi. 1 hour (432hz) diff --git a/ytube/_data/lists/work-music-keys.yml b/ytube/_data/lists/work-music-keys.yml index a535dc2..e2905a9 100644 --- a/ytube/_data/lists/work-music-keys.yml +++ b/ytube/_data/lists/work-music-keys.yml @@ -23,0 +24 @@ +- A3FvTqj6jA4 # Bamboo Water Fountain 24/7 diff --git a/ytube/_data/lists/wuotai-music-keys.yml b/ytube/_data/lists/wuotai-music-keys.yml index 8554483..ddb8a

--- a/ytube/_data/lists/chill-deep-keys.yml
+++ b/ytube/_data/lists/chill-deep-keys.yml
@@ -2,6 +2,7 @@
 - cD-d7u6fnEI # Chill House Playlist | Relaxing Summer Music 2019
 - Ur_tXqaNXOI # Summer Music Mix 2018 🌴-  Kygo, Ed Sheeran, Coldplay, Camila Cabello, Sia Style - Chill Out
 - JyBn1zUMbQc # Faithless - Insomnia (Kapral Remix)
+- Iau3RDSn5o4 # Take It Easy ' Best Of Vocal Deep House Mix [Vol.5]
 - xpz_r6sViss # Smooth &amp; Elegant - Deep House Mix [Lounge Session Vol.3]
 - 0IzmujPmSAU # Deep &amp; Smooth • Elegant Deep House Mix [Lounge Session Vol.2]
 - 13xH5E3RWyM # Sia - Cheap Thrills Ft. Sean Paul (Remix) - Shuffle Dance &amp; Choreography Dance (Music video)
