--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -21,6 +21,7 @@
 - Y-knD-U7_ik # 9 GOLDEN MANTRAS | 108 Times
 - K4ccN__EwAM # Schamanentrommel - 30 Minuten Heiltrommel für schamanische Reisen
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
+- T9DsqFfqwY0 # Buddha's Flute: Speace to Breathe 2
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - NyKntOXIINI # Alan Watts ~ Listen & Breathe (Guided Meditation)
 - DLQD47iDb18 # 639 Hz ❯ LOVE &amp; COMPASSION SOUNDBATH ❯ Heart Chakra Healing Frequency Music ❯ Pure Miracle Tone
