--- a/ytube/_data/lists/music-keys.yml
+++ b/ytube/_data/lists/music-keys.yml
@@ -1169,6 +1169,7 @@
 - nCw0wlv3pyQ # Caro Emerald - Mistaken identity
 - EZMOh9TglsI # Emeli Sandé - Hurts - Live at the BRIT Awards 2017
 - CC6vDsm1dXQ # Ella Henderson sings Evanescence&#39;s Bring Me To Life - Live Week 4 - The X Factor UK 2012
+- boqLC9qgEM8 # Nancy Sinatra - Bang Bang (My baby shot me down)
 - YFw4hlFSXe4 # Everybody's Gotta Learn Sometimes - Beck
 - 6ilx_3islIk # Two Steps From Hell - Secret Melody ( EXTENDED Remix by Kiko10061980 )
 - f2r6euMysl0 # Ders Çalışırken Dinlemelik Sakin Şarkılar (cello)
