--- a/ytube/_data/lists/new-age-keys.yml
+++ b/ytube/_data/lists/new-age-keys.yml
@@ -7,6 +7,7 @@
 - mmYOAoZefHA # Oleg Byonic – Horizont #Best Relax Music
 - WzoG16FOyA8 # Man Of No Ego - Blinkers Removed [Full Album]
 - 4cYsTrQQepo # Ambient Music: Bliss - Seven Lives
+- UWG7iRxRNLM # Namaste: Devi Prayer, Hindu, Spiritual music, gentle, calming, peaceful music, relaxing music
 - KcLP8v3823I # EVANESCENCE - &quot;Lacrymosa&quot; (Official Audio - Synthesis)
 - 7jPcH5ZO4C0 # Best of Eurielle  (Beautiful Vocal)
 - zkGzQulZSEo # Eldar Mansurov - Taleyim
@@ -17,4 +18,5 @@
 - xecukJDAPcw # [Try Listening for 3 Minutes] - Open Third Eye - Pineal Gland Activation - Third Eye Stimulation
 - FQxIWlp_Q6s # NEW Quick Chakra Tune-Up - 2 Minutes Per Chakra - All Chakras - Chakra Music, Chakra Meditation
 - twfgsQxLX8Q # Music Of Angels • Music To Heal All Pains Of Body, Soul And Spirit, Calm The Mind, Meditate
+- sGJwoluF-HI # Jakare - Apu (Remixes) [Organic House | Shamanic Downtempo]
 - KSbWyA6FeCw # All Night 7 Chakras Peaceful Flute & Water Healing Sleep & Meditation Music | Crystal Singing Bowls
