--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -167,6 +167,7 @@
 - 9z3jCiCrsx0 # Yann Tiersen - Porz Goret
 - s_Vg5NN7LBo # Ennja - Let Go
 - bR5u9jb0PJE # Meg Myers - Desire [Music Video]
+- GOI17-4J-I8 # Yann Tiersen - Comptine d'un Autre été l'après-midi. 1 hour (432hz)
 - rNYLTSKUa1k # AUD REY - Tu ne m&#39;auras pas (Clip Officiel)
 - OZYw0MQp_fI # London Grammar - Nightcall [Official Video]
 - JPJjwHAIny4 # Lady Gaga, Bradley Cooper - Shallow (From A Star Is Born/Live From The Oscars)
