--- a/ytube/_data/lists/work-music-keys.yml
+++ b/ytube/_data/lists/work-music-keys.yml
@@ -21,6 +21,7 @@
 - Ne5J4bxWypI # 6 Hour Relaxing Piano Music: Meditation Music, Relaxing Music, Soft Music, Relaxation Music, ☯2423
 - GKjswZ9ou8U # Epica &amp; Floor Jansen - Sancta Terra Live HD
 - ss7EJ-PW2Uk # 3 Hour Relaxing Guitar Music: Meditation Music, Instrumental Music, Calming Music, Soft Music, ☯2432
+- A3FvTqj6jA4 # Bamboo Water Fountain 24/7
 - _zR6ROjoOX0 # Iggy Azalea - Work (Explicit)
 - -MySqsrnCF8 # Roger Waters  -  It&#39;s a Miracle
 - aySea-YvWHk # Within Temptation - M&#39;era Luna Festival 2016 (Full Show) HD
