--- a/ytube/_data/lists/wuotai-music-keys.yml
+++ b/ytube/_data/lists/wuotai-music-keys.yml
@@ -85,13 +85,16 @@
 - imXJaLviREo # FUNNY ANIMALS: Try not to LAUGH - The FUNNIEST ANIMAL videos
 - 7QPtFy7OnGE # EURIELLE - CARRY ME (Official Video)
 - Cy44ocuoWhE # Garmarna - Herr Mannelig
+- gAt-2qNkHos # Deva Premal: Healing Mantra (Twameva)
 - 3f3KhR5oDC4 # Bliss - Wish You Were Here | VideoClip ᴴᴰ by yanniszita
 - pUfGjWYpE-I # 2 HOURS of Celtic Fantasy Music - Magical, Beautiful &amp; Relaxing Music
 - gIOytoFNxOU # Gregorian ft Sarah Brightman - Moment Of Peace
 - MZwEqr73e2A # Música Celta Alegre, Épica y Hermosa - 2 Horas que te Harán Vibrar de Emoción
 - zOvsyamoEDg # FAUN - Federkleid (Offizielles Video)
+- yQjHSIHPJfw # Deva Premal - Gayatri Mantra (30 Min Meditation)
 - DGQ1kzBoImY # Tibetische Meditationsmusik, Entspannende Musikmeditation, Yoga, Binaurale Takte, ✿3186C
 - sTgElQpyrvY # Estas Tonne -  place of the Gods full album
+- OvFzLhYtsAc # Yasmin Levy y Amir Shahsar - La niña de las flores
 - wvTzF9h4LAE # Strings of a Bard (acoustic) - Estas Tonne (2021)
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - XrX9nR6j9zw # Unser Highlight: Sound &amp; Silence Festival. Estas Tonne, Joseph Pepe Danza, Netanel Goldberg
@@ -99,8 +102,11 @@
 - tByJMiQp-IM # Music to Cleanse of Negative Energy at Home Space.
 - bHAHxv5dWtY # Kalimba Playing &amp; Voice - Soothing Meditation Music | Calm &amp; El Grey - M¬el¬lo
 - 28wBrNjHXOM # Shamanic drum &amp; Didgeridoo Hypnotic Meditation music - 35min
+- Hqnyjo7rx_4 # Estas Tonne : A meditative experience
 - szfu1DV3pR8 # Unveiled Mystery - Estas Tonne ‖ Netanel Goldberg ‖ Joseph Pepe Danza
 - -fsZcUhCDpE # Angèlia Grace – Time (Inception) by Hans Zimmer [cover]
+- asmDu8xut0M # Armand Amar/Levon Minassian & Meditation Music
 - hnXD6FRZtn0 # Skyrim - The Dragonborn Comes - Swedish Radio Symphony Orchestra / Sabina Zweiacker
 - w0IANdS3jhY # Музыка для женских практик
 - Pj4q0Mc08EY # 2 HOURS Hypnotic SHAMANIC MEDITATION MUSIC Healing Music for the Soul, Tuvan Chakra Cleansing
+- xoBpkz_yay8 # Snatam Kaur and Ajeet Kaur ⋄ Sacred Chants
