--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -71,6 +71,7 @@
 - god-keys
 - governance-keys
 - gradual-keys
+- guitar-music-keys
 - gurus-keys
 - hackers-keys
 - hard-keys
@@ -88,6 +89,7 @@
 - loveburn2018-keys
 - love-keys
 - m4gc-keys
+- mantra-keys
 - marketing-keys
 - maths-keys
 - medit-keys
@@ -162,6 +164,7 @@
 - test-keys
 - the-rich-keys
 - thump-keys
+- top-chart-keys
 - trance-keys
 - transhumanism-keys
 - TSwan-keys
@@ -179,6 +182,7 @@
 - workout-music-keys
 - world-change-keys
 - world-keys
+- world-music-keys
 - wuotai-keys
 - wuotai-music-keys
 - yt-keys
