--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13120,16 +13120,33 @@
 
 
 
+- Iau3RDSn5o4 # Take It Easy ' Best Of Vocal Deep House Mix [Vol.5]
+
+
+- qIIU23eCxZM # OTTMAR LIEBERT & LUNA NEGRA ~ Concierto! 'Bombay' (1996 concert movie) 1080p audio
+
+
+
+- gAt-2qNkHos # Deva Premal: Healing Mantra (Twameva)
+- yQjHSIHPJfw # Deva Premal - Gayatri Mantra (30 Min Meditation)
+
+- T9DsqFfqwY0 # Buddha's Flute: Speace to Breathe 2
+
+- boqLC9qgEM8 # Nancy Sinatra - Bang Bang (My baby shot me down)
+- UWG7iRxRNLM # Namaste: Devi Prayer, Hindu, Spiritual music, gentle, calming, peaceful music, relaxing music
+- sGJwoluF-HI # Jakare - Apu (Remixes) [Organic House | Shamanic Downtempo]
 
 
 
 
+- GOI17-4J-I8 # Yann Tiersen - Comptine d'un Autre été l'après-midi. 1 hour (432hz)
+- atQFdcGj0R0 # Glimmer of Blooms - I Cant Get You Out Of My Head one Hour (LYRICS) - ساعه كامله احدث الاغاني 2020
 
 
 
-
-
-
-
-
-
+- A3FvTqj6jA4 # Bamboo Water Fountain 24/7
+- rgkCLFBUjkw # Yasmin Levy - La Juderia (Full Album)
+- OvFzLhYtsAc # Yasmin Levy y Amir Shahsar - La niña de las flores
+- Hqnyjo7rx_4 # Estas Tonne : A meditative experience
+- asmDu8xut0M # Armand Amar/Levon Minassian & Meditation Music
+- xoBpkz_yay8 # Snatam Kaur and Ajeet Kaur ⋄ Sacred Chants
