playlist update on 07/04/21:\n diff --git a/ytube/_data/lists/mantra-keys.yml b/ytube/_data/lists/mantra-keys.yml index 38febd1..fd5758b 100644 --- a/ytube/_data/lists/mantra-keys.yml +++ b/ytube/_data/lists/mantra-keys.yml @@ -19,0 +20 @@ +- lnzH5w5AhaM # The Most Powerful Woman's Mantra - Womb Mantra - Peruquois (Мать Матка Мантра - Перукуа) diff --git a/ytube/_data/lists/new-age-keys.yml b/ytube/_data/lists/new-age-keys.yml index a47f5eb..66827c3 100644 --- a/ytube/_data/lists/new-age-keys.yml +++ b/ytube/_data/lists/new-age-keys.yml @@ -3,0 +4,2 @@ +- z-HSlqS713Y # Savage & Shē | Sian Ka´an Organic Live Act | by @EPHIMERA Tulum +- jCchl8I_S-k # KARUNESH MIX @@ -13,0 +16 @@ +- r56D5J_HiNE # Priestess, Goddess, Woman - Peruquois @@ -15,0 +19 @@ +- t1zNV7HoeQ8 # Divine Lover of Woman ~ Love's Deepest Calling ~ Peruquois diff --git a/ytube/publish.sh b/ytube/publish.sh index f245ee6..ec9884c 100644 --- a/ytube/publish.sh +++ b/ytube/publish.sh @@ -29 +29 @@ git push origin -xdg-open https://netlify.com/sites/ytube/deploy +xdg-open https://app.netlify.com/sites/ytube/deploys @@ -30,0 +31 @@ xdg https://ytube.netlify.com +holo-git-push

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13118,14 +13118,9 @@
 - wvTzF9h4LAE # Strings of a Bard (acoustic) - Estas Tonne (2021)
 - w0IANdS3jhY # Музыка для женских практик
 
-
-
 - Iau3RDSn5o4 # Take It Easy ' Best Of Vocal Deep House Mix [Vol.5]
 
-
 - qIIU23eCxZM # OTTMAR LIEBERT & LUNA NEGRA ~ Concierto! 'Bombay' (1996 concert movie) 1080p audio
-
-
 
 - gAt-2qNkHos # Deva Premal: Healing Mantra (Twameva)
 - yQjHSIHPJfw # Deva Premal - Gayatri Mantra (30 Min Meditation)
@@ -13136,13 +13131,8 @@
 - UWG7iRxRNLM # Namaste: Devi Prayer, Hindu, Spiritual music, gentle, calming, peaceful music, relaxing music
 - sGJwoluF-HI # Jakare - Apu (Remixes) [Organic House | Shamanic Downtempo]
 
-
-
-
 - GOI17-4J-I8 # Yann Tiersen - Comptine d'un Autre été l'après-midi. 1 hour (432hz)
 - atQFdcGj0R0 # Glimmer of Blooms - I Cant Get You Out Of My Head one Hour (LYRICS) - ساعه كامله احدث الاغاني 2020
-
-
 
 - A3FvTqj6jA4 # Bamboo Water Fountain 24/7
 - rgkCLFBUjkw # Yasmin Levy - La Juderia (Full Album)
@@ -13150,3 +13140,24 @@
 - Hqnyjo7rx_4 # Estas Tonne : A meditative experience
 - asmDu8xut0M # Armand Amar/Levon Minassian & Meditation Music
 - xoBpkz_yay8 # Snatam Kaur and Ajeet Kaur ⋄ Sacred Chants
+
+
+
+
+
+
+
+- lnzH5w5AhaM # The Most Powerful Woman's Mantra - Womb Mantra - Peruquois (Мать Матка Мантра - Перукуа)
+
+
+- z-HSlqS713Y # Savage & Shē | Sian Ka´an Organic Live Act | by @EPHIMERA Tulum
+- jCchl8I_S-k # KARUNESH MIX
+- r56D5J_HiNE # Priestess, Goddess, Woman - Peruquois
+- t1zNV7HoeQ8 # Divine Lover of Woman ~ Love's Deepest Calling ~ Peruquois
+
+
+
+
+
+
+
