playlist update on 07/15/21:\n diff --git a/ytube/_data/lists/TEDs-keys.yml b/ytube/_data/lists/TEDs-keys.yml index be337e7..c3b1e4f 100644 --- a/ytube/_data/lists/TEDs-keys.yml +++ b/ytube/_data/lists/TEDs-keys.yml @@ -4,0 +5 @@ +- Un2yBgIAxYs # How trees talk to each other | Suzanne Simard diff --git a/ytube/_data/lists/birds-keys.yml b/ytube/_data/lists/birds-keys.yml index 4795f93..e127bdb 100644 --- a/ytube/_data/lists/birds-keys.yml +++ b/ytube/_data/lists/birds-keys.yml @@ -3 +3 @@ -- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ] +#- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ] @@ -5,7 +5,7 @@ -- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente -- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds) -- jeJT_el4wTA # MÖWE - Birds Flying High -- lT67liGjZhw # Birdy - Skinny Love [One Take Music Video] -- 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39; -- jBIRD91AZ5M # Best russian music hits 90&#39;s -- niRpDsflYAc # Hardwell feat. Mr. Probz - Birds Fly (OUT NOW!) #UnitedWeAre +#- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente +#- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds) +#- jeJT_el4wTA # MÖWE - Birds Flying High +#- lT67liGjZhw # Birdy - Skinny Love [One Take Music Video] +#- 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39; +#- jBIRD91AZ5M # Best russian music hits 90&#39;s +#- niRpDsflYAc # Hardwell feat. Mr. Probz - Birds Fly (OUT NOW!) #UnitedWeAre @@ -19,2 +19,2 @@ -- GJGNmgy676I # Granville Online: Flight of the hummingbird -- JVmDOJcBrR0 # The Hummingbird and the Forest Fire +#- GJGNmgy676I # Granville Online: Flight of the hummingbird +#- JVmDOJcBrR0 # The Hummingbird and the Forest Fire @@ -23,3 +23,3 @@ -- sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds -- NeQi1CcA7a8 # Sia - Bird Set Free (The Golden Pony Re

--- a/ytube/_data/lists/TEDs-keys.yml
+++ b/ytube/_data/lists/TEDs-keys.yml
@@ -2,6 +2,7 @@
 - wX78iKhInsc # How to escape education's death valley | Sir Ken Robinson
 - aspMV6ERqpo # The great filter | Robin Hanson | TEDxLimassol
 - q5yxIzs5Wug # How to translate the feeling into sound | Claudio | TEDxPerth
+- Un2yBgIAxYs # How trees talk to each other | Suzanne Simard
 - pczLRco6nyI # Jesse Draper at TEDxBayArea
 - sgWyolwBGgE # How do I deal with a bully, without becoming a thug? | Scilla Elworthy | TEDxExeter
 - MknV3t5QbUc # Game theory challenge: Can you predict human behavior? - Lucas Husted
