--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13141,14 +13141,7 @@
 - asmDu8xut0M # Armand Amar/Levon Minassian & Meditation Music
 - xoBpkz_yay8 # Snatam Kaur and Ajeet Kaur ⋄ Sacred Chants
 
-
-
-
-
-
-
 - lnzH5w5AhaM # The Most Powerful Woman's Mantra - Womb Mantra - Peruquois (Мать Матка Мантра - Перукуа)
-
 
 - z-HSlqS713Y # Savage & Shē | Sian Ka´an Organic Live Act | by @EPHIMERA Tulum
 - jCchl8I_S-k # KARUNESH MIX
@@ -13156,8 +13149,51 @@
 - t1zNV7HoeQ8 # Divine Lover of Woman ~ Love's Deepest Calling ~ Peruquois
 
 
+#- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ]
+#- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente
+#- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds)
+#- jeJT_el4wTA # MÖWE - Birds Flying High
+#- lT67liGjZhw # Birdy - Skinny Love [One Take Music Video]
+#- 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39;
+#- jBIRD91AZ5M # Best russian music hits 90&#39;s
+#- niRpDsflYAc # Hardwell feat. Mr. Probz - Birds Fly (OUT NOW!) #UnitedWeAre
+#- GJGNmgy676I # Granville Online: Flight of the hummingbird
+#- JVmDOJcBrR0 # The Hummingbird and the Forest Fire
+#- sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds
+#- NeQi1CcA7a8 # Sia - Bird Set Free (The Golden Pony Remix)
+#- hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
+
+
+- bPVYAq2nsgo # Esther Perel ON: Finding Love & the Real Reason Couples Break Up
+
+
+- GZw8fRPK-8k # How to Release Emotions Trapped in Your Body 10/30 How to Process Emotions Like Trauma and Anxiety
+- yBdUec86_YY # Learn about vaccine progress from the WHO
 
 
 
 
+
+
+
+
+- aSSU6yLsnWU # HK - Dis-leur que l'on s'aime, dis-leur que l'on sème (Officiel)
+- LBVYVw3-eOs # Léa Castel - Amour à la haine [Clip officiel]
+- w6ccbOC0XUI # HAEVN - Throw Me a Line
+
+- Un2yBgIAxYs # How trees talk to each other | Suzanne Simard
+
+
+
+- 5ur6DWdE-HE # HK - Petite Terre (officiel)
+- tN0ipJq9nac # HK & Les Saltimbanks - "On lâche rien"
+- Dh1K-R3_Zco # POWERFUL MANTRA TO OPEN THE THIRD EYE ... ACTIVATE THE PINEAL GLAND
+- 6THHrPyZQuQ # ZAZ – Qué vendrá (Clip officiel)
+- yd7IMUCpUcA # Mei-lan - Shalom (Live)
+- 4ei0zNu-6HQ # Guided Meditation - Step Into Your Power  
+- uJWoy58wsmM # Abel Korzeniowski - Dance For Me Wallis
+- 9g-6y1yWlPA # ZAZ - Demain c’est toi (vidéo studio)
+- dUJMreWwF-I # "Cradle for the Sacred"
+- XFW2YQLp_3Q # 1 Hour of Soul Healing Music - In the Arms of an Angel - Blissful Sounds for Sleep - No Words
+- _k_XlAx1_9E # Healing Light Frequency ❤️
 
