--- a/ytube/_data/lists/birds-keys.yml
+++ b/ytube/_data/lists/birds-keys.yml
@@ -1,14 +1,14 @@
 # birds songs ...
 - NK2_bcQcoD4 # BEST NIGHTINGALE SONG - 3 Hours REALTIME Nightingale Singing, NO LOOP - Birdsong, Birds Chirping
-- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ]
+#- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ]
 - 6OkY9aq4lBM # 🎧 Water Stream And Forest Ambience, 8 Hours Of Birds Singing &amp; Streaming Creek Sounds For Relaxation
-- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente
-- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds)
-- jeJT_el4wTA # MÖWE - Birds Flying High
-- lT67liGjZhw # Birdy - Skinny Love [One Take Music Video]
-- 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39;
-- jBIRD91AZ5M # Best russian music hits 90&#39;s
-- niRpDsflYAc # Hardwell feat. Mr. Probz - Birds Fly (OUT NOW!) #UnitedWeAre
+#- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente
+#- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds)
+#- jeJT_el4wTA # MÖWE - Birds Flying High
+#- lT67liGjZhw # Birdy - Skinny Love [One Take Music Video]
+#- 6oT8ReF5rjE # Sia Performs &#39;Bird Set Free&#39;
+#- jBIRD91AZ5M # Best russian music hits 90&#39;s
+#- niRpDsflYAc # Hardwell feat. Mr. Probz - Birds Fly (OUT NOW!) #UnitedWeAre
 - VeIhRdR2jsU # 3 Hour bird sounds Relaxation - Nature sounds music for Meditation - Birds chirping, birds singing
 - CppmXLEWzEs # Songbirds 11 Hours -Sounds of Nature 26 of 59 - Pure Nature Sounds
 - if7hy1GG7Jk # Весенние птицы / Birds Singing Relax
@@ -16,12 +16,12 @@
 - pvyoLAwchg4 # Calming Music for Cats = The Sounds of Nature and Beautiful Bird Song
 - eMWeQWGla0Y # Tranquil Birdsong, 11 hours - Birds Chirping, nature sounds, natural sound of birds singing
 - s9dbAfjlrks # Robin Birds Chirping and Singing - Beautiful Bird Sounds and Bird Song
-- GJGNmgy676I # Granville Online: Flight of the hummingbird
-- JVmDOJcBrR0 # The Hummingbird and the Forest Fire
+#- GJGNmgy676I # Granville Online: Flight of the hummingbird
+#- JVmDOJcBrR0 # The Hummingbird and the Forest Fire
 - k2E4wt8BijM # Meditation Sounds - Flowing River and Birds #1(Calm Relaxing Sounds)
 - LKbauxUmR80 # White Noise For Babies, Meditation Relaxing Sleep Sounds of Water, Birds and Sounds of Nature
-- sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds
-- NeQi1CcA7a8 # Sia - Bird Set Free (The Golden Pony Remix)
-- hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
+#- sBAYjJUtigY # Clif High: Temporal Awareness, Cryptocurrencies, The Yogi vs.The Bluebirds
+#- NeQi1CcA7a8 # Sia - Bird Set Free (The Golden Pony Remix)
+#- hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
 - jBIRD91AZ5M
 - 2G8LAiHSCAs&list=PLT6TY7eRibNzA2jdkFtI5gVkOTM0bGcyy
