--- a/ytube/_data/lists/healing-keys.yml
+++ b/ytube/_data/lists/healing-keys.yml
@@ -14,6 +14,7 @@
 - YhDB37KwNv8 # Zero Point Energy Healing tools - Part 2
 - XT5hoymUjio # Quantum Healing - Anything Is Possible!  Part 1
 - 82ShSNuru6c # Bruce Lipton The Biology of Belief Full Lecture
+- GZw8fRPK-8k # How to Release Emotions Trapped in Your Body 10/30 How to Process Emotions Like Trauma and Anxiety
 - xexh4DUQWT4 # matrix 2 point new
 - BxOw3Zy_GxA
 - 2ULFDHVoq70 # Reversing Blindness
