--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -1,5 +1,6 @@
 --- 
 - rAOh0hNckUo&list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY&start_radio=1
+- aSSU6yLsnWU # HK - Dis-leur que l'on s'aime, dis-leur que l'on sème (Officiel)
 - g8_hNOo7mbA # Constantinos ILIOPOULOS - Tango Nuevo
 - M_kTSBqQkME # Kovacs - My Love
 - -UhlBqlKISU # Louane - Donne-moi ton coeur
@@ -8,6 +9,7 @@
 - DC7sHxzRQAA # London Grammar - Non Believer (Official Video)
 - ZYlNjQ5TTF4 # Enigma - Amen (Official Video)
 - IoN_ZaoFSW8 # Kerala Dust - Maria (official video)
+- LBVYVw3-eOs # Léa Castel - Amour à la haine [Clip officiel]
 - KfyBHZc9rK4 # Cher - Bang Bang (My Baby Shot Me Down) (Official Video) | Original Version
 - Ez62cQPYyI8 # Oblivion by Nadja Kossinskaja
 - NenPwk0noTg # Les Frères Scotch - La nuit
@@ -24,6 +26,7 @@
 - mmA5fekq8yQ
 - lfkgOWrd1vc # LP - When We're High [Official Video]
 - 1mB0tP1I-14 # Lady Gaga - LoveGame (Official Music Video)
+- w6ccbOC0XUI # HAEVN - Throw Me a Line
 - c7PLgW7LwhU # Sia - Alive (The fifth wave movie)
 - pkeDBwsIaZw
 - IJzHSYjR0dE # Cigarettes After Sex - Affection (The Dreamers)
