--- a/ytube/_data/lists/world-music-keys.yml
+++ b/ytube/_data/lists/world-music-keys.yml
@@ -1,2 +1,4 @@
 --- 
 - rgkCLFBUjkw # Yasmin Levy - La Juderia (Full Album)
+- 5ur6DWdE-HE # HK - Petite Terre (officiel)
+- tN0ipJq9nac # HK & Les Saltimbanks - "On lâche rien"
