--- a/ytube/_data/lists/wuotai-music-keys.yml
+++ b/ytube/_data/lists/wuotai-music-keys.yml
@@ -1,5 +1,13 @@
---- 
+---
+- Dh1K-R3_Zco # POWERFUL MANTRA TO OPEN THE THIRD EYE ... ACTIVATE THE PINEAL GLAND
+- 6THHrPyZQuQ # ZAZ – Qué vendrá (Clip officiel)
+- yd7IMUCpUcA # Mei-lan - Shalom (Live)
+- 4ei0zNu-6HQ # Guided Meditation - Step Into Your Power  
+- uJWoy58wsmM # Abel Korzeniowski - Dance For Me Wallis
+- 9g-6y1yWlPA # ZAZ - Demain c’est toi (vidéo studio)
 - s1SuqX3VKOU # נתנאל גולדברג - HOLY
+- dUJMreWwF-I # "Cradle for the Sacred"
+- XFW2YQLp_3Q # 1 Hour of Soul Healing Music - In the Arms of an Angel - Blissful Sounds for Sleep - No Words
 - hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
 - GpfpKBi82zM # Peruquois ритм
 - 9uaOhC98-jc # Om ahh hum by Jane Winther : unisound.dk
@@ -16,6 +24,8 @@
 - BSmToj9VZ4s # Deva Premal - Gayatri Mantra (2 hours)
 - Gq6Kx2mGC1k # Lokah Samastah ~Jane Winthers
 - iDss3NMAAKg # Oliver Shanti - Water (1 hour)
+- _k_XlAx1_9E # Healing Light Frequency ❤️
+
 - ZGe1wkBJE6E # Luna Deva &amp; Tombaba &amp; Pepe Danza - earthchild
 - 6rVPjrGT54U # Moon Chant
 - As-oVm6NDX0 # Sarah &amp; Amelia Brightman   &quot;Moment Of Peace&quot; feat. Gregorian
