playlist update on 07/18/21:\n diff --git a/ytube/_data/lists/burnman-ish-keys.yml b/ytube/_data/lists/burnman-ish-keys.yml index 37d133d..8681dc2 100644 --- a/ytube/_data/lists/burnman-ish-keys.yml +++ b/ytube/_data/lists/burnman-ish-keys.yml @@ -17,0 +18 @@ +- azfTB6oXhis # Liquid Waves (Psytrance Progressive Mix Oktober 2018) diff --git a/ytube/_data/lists/health-keys.yml b/ytube/_data/lists/health-keys.yml index 5d93f60..4c3a459 100644 --- a/ytube/_data/lists/health-keys.yml +++ b/ytube/_data/lists/health-keys.yml @@ -2 +2 @@ -- jtqAqL3fn64 # The Untold Story of the First Vaccine +- p79D6u-6pN4 # Let Food Be Thy Medicine @@ -4,0 +5,2 @@ +- HDHvZk1d0u8 # Zebrafish: Practically People – How to Save the Human Species | Dr. Wendy Leonard | TEDxWilmington +- Md y01JdxvE # Dr. Syed Haider Discusses COVID Management (July 2021) diff --git a/ytube/_data/lists/mantra-keys.yml b/ytube/_data/lists/mantra-keys.yml index fd5758b..036044e 100644 --- a/ytube/_data/lists/mantra-keys.yml +++ b/ytube/_data/lists/mantra-keys.yml @@ -4,0 +5 @@ +- xak7uM2HpH4 # SHIV MANTRA MEDITATION with Shamanic Drums || Mantra Trance to Keep Negative Energies Away diff --git a/ytube/_data/lists/music-keys.yml b/ytube/_data/lists/music-keys.yml index 488a5d1..a333161 100644 --- a/ytube/_data/lists/music-keys.yml +++ b/ytube/_data/lists/music-keys.yml @@ -4,0 +5 @@ +- _4Cswp7smQ0 # ONUKA - TIME (Official Music Video) @@ -6,0 +8 @@ +- Z1vjEQUgenU # Daisy Gray - Lovely (Billie Eilish and Khalid Cover) @@ -8,0 +11 @@ +- oDNeQP7I540 # Tarja Turunen - Innocence @@ -17,0 +21 @@ +- 63rcRb930Fg # Imany - The A Team (Ed Sheeran Cover) diff --git a/ytube/_data/lists/nature-keys.yml b/ytube/_data/lists/nature-keys.yml index 8f4f93f..06d08f3 100644 --- a/ytube/_data/lists/nature-keys.yml +++ b/ytube/_data/lists/nature-keys.yml @@ -14,0 +15 @@ +- 9HiADisBfQ0 # The Secret Language of Trees diff --git a/ytube/_data/lists/removed-keys.yml b/ytube/_data/lists/removed-keys.yml index 299ca53..6add3fb 100644 --- a/ytu

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13148,7 +13148,6 @@
 - r56D5J_HiNE # Priestess, Goddess, Woman - Peruquois
 - t1zNV7HoeQ8 # Divine Lover of Woman ~ Love's Deepest Calling ~ Peruquois
 
-
 #- NRZBd1m8W6A # Osho Songs- A Bird Called Now [ music video ]
 #- ocyK1AzMnDI # Bird Set Free - Sia (legendado) - A Série Divergente
 #- nMFUkbr7ymY # The Theory of Everything - Soundtrack ending scene (The Cinematic Orchestra - Arrival of the birds)
@@ -13163,27 +13162,16 @@
 #- NeQi1CcA7a8 # Sia - Bird Set Free (The Golden Pony Remix)
 #- hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
 
-
 - bPVYAq2nsgo # Esther Perel ON: Finding Love & the Real Reason Couples Break Up
-
 
 - GZw8fRPK-8k # How to Release Emotions Trapped in Your Body 10/30 How to Process Emotions Like Trauma and Anxiety
 - yBdUec86_YY # Learn about vaccine progress from the WHO
-
-
-
-
-
-
-
 
 - aSSU6yLsnWU # HK - Dis-leur que l'on s'aime, dis-leur que l'on sème (Officiel)
 - LBVYVw3-eOs # Léa Castel - Amour à la haine [Clip officiel]
 - w6ccbOC0XUI # HAEVN - Throw Me a Line
 
 - Un2yBgIAxYs # How trees talk to each other | Suzanne Simard
-
-
 
 - 5ur6DWdE-HE # HK - Petite Terre (officiel)
 - tN0ipJq9nac # HK & Les Saltimbanks - "On lâche rien"
@@ -13196,4 +13184,39 @@
 - dUJMreWwF-I # "Cradle for the Sacred"
 - XFW2YQLp_3Q # 1 Hour of Soul Healing Music - In the Arms of an Angel - Blissful Sounds for Sleep - No Words
 - _k_XlAx1_9E # Healing Light Frequency ❤️
+
+
+- azfTB6oXhis # Liquid Waves (Psytrance Progressive Mix Oktober 2018)
+
+
+- NbylLcO5_uU # Global update, mandated vaccination
+- Md y01JdxvE # Dr. Syed Haider Discusses COVID Management (July 2021)
+- oKGH-hfTv9U # The Truth about Natural COVID Immunity
+- UGgvgKE0n8o # Vaccine Passports: THIS Is Where It Leads
+
+
+- p79D6u-6pN4 # Let Food Be Thy Medicine
+- HDHvZk1d0u8 # Zebrafish: Practically People – How to Save the Human Species | Dr. Wendy Leonard | TEDxWilmington
+
+
+
+- xak7uM2HpH4 # SHIV MANTRA MEDITATION with Shamanic Drums || Mantra Trance to Keep Negative Energies Away
+
+
+- _4Cswp7smQ0 # ONUKA - TIME (Official Music Video)
+- Z1vjEQUgenU # Daisy Gray - Lovely (Billie Eilish and Khalid Cover)
+- oDNeQP7I540 # Tarja Turunen - Innocence
+- 63rcRb930Fg # Imany - The A Team (Ed Sheeran Cover)
+- 9HiADisBfQ0 # The Secret Language of Trees
+
+
+- -c5gj9xxxcq # 
+- ZuTFLiFRTHU # Visiclear Video...Miracle or Snakeoil? Read description for details!
+- YGG2zJ8Q-mo # My VisiClear Review (2021) - Scam Or Really Works?
+
+- wrAlPeQj_Ns # James Bay - Incomplete - Tessandra Chavez x Tim Milgram
+
+
+
+
 
