--- a/ytube/_data/lists/burnman-ish-keys.yml
+++ b/ytube/_data/lists/burnman-ish-keys.yml
@@ -15,3 +15,4 @@
 - LDBmsy_3y0A # Kichaa M. ft. Stuty Maskey - Dum Maro Dum
 - bRoPFNAGJC4 # Psytrance Set May 2017 Party DJ Mix by Electric Samurai 155 Minutes Set
 - ToLJE4YEQRI # Tomorrowland Belgium 2017 | MATTN
+- azfTB6oXhis # Liquid Waves (Psytrance Progressive Mix Oktober 2018)
