--- a/ytube/_data/lists/health-keys.yml
+++ b/ytube/_data/lists/health-keys.yml
@@ -1,5 +1,7 @@
 --- # health related videos
-- jtqAqL3fn64 # The Untold Story of the First Vaccine
+- p79D6u-6pN4 # Let Food Be Thy Medicine
 - NJ7M01jV058 # A Scientist Spilled 2 Drops Organic Mercury On Her Hand. This Is What Happened To Her Brain.
 - yBdUec86_YY # Learn about vaccine progress from the WHO
+- HDHvZk1d0u8 # Zebrafish: Practically People – How to Save the Human Species | Dr. Wendy Leonard | TEDxWilmington
+- Md y01JdxvE # Dr. Syed Haider Discusses COVID Management (July 2021)
 
