--- a/ytube/_data/lists/mantra-keys.yml
+++ b/ytube/_data/lists/mantra-keys.yml
@@ -2,6 +2,7 @@
 - BVf-uxDfSls # MANTRA for KUNDALINI AWAKENING
 - piW3-09Zk_E # OM Mantra Chants @ 174Hz for Pain Relief
 - Y-knD-U7_ik # 9 GOLDEN MANTRAS | 108 Times
+- xak7uM2HpH4 # SHIV MANTRA MEDITATION with Shamanic Drums || Mantra Trance to Keep Negative Energies Away
 - zwTGyO3MdP4 # Mantras for Deep Inner Peace | 8 Powerful Mantras
 - GfmxT-fHJd8 # Mantra to Calm Mind | Tan Man Shaant | Soothing Calming Relaxing Meditation Music
 - cDCS19EOsrA # Buddhist Meditation Music for Positive Energy: Buddhist Thai Monks Chanting Healing Mantra
