--- a/ytube/_data/lists/nature-keys.yml
+++ b/ytube/_data/lists/nature-keys.yml
@@ -12,3 +12,4 @@
 - XI5frPV58tY # 6 ways mushrooms can save the world | Paul Stamets
 - M9joL8spvS8 # Psilocybin Mushrooms and the Mycology of Consciousness: Immersion into the MycoVerse
 - vFWxWq0Fv0U # Paul Stamets: Psilocybin Mushrooms & The Mycology of Consciousness
+- 9HiADisBfQ0 # The Secret Language of Trees
