--- a/ytube/_data/lists/removed-keys.yml
+++ b/ytube/_data/lists/removed-keys.yml
@@ -8,3 +8,4 @@
 - 1-hphxgC8Ns # Where did humans come from?  New Documentary 2017
 - 2K-IaaWV1Dw # Origins of The Bible - Documentary
 - -Qec14tbNVA # YouTube
+- -c5gj9xxxcq # 
