--- a/ytube/_data/lists/talents-keys.yml
+++ b/ytube/_data/lists/talents-keys.yml
@@ -15,6 +15,7 @@
 - k4ixAfJ1LuI # World&#39;s Best Guitar Player Unbelievable
 - Q4oInT79CUk # Nouela - The Sound of Silence [Lyrics]
 - IZv7pmDCeeU # Melanie Martinez - Toxic (Full Studio Version)
+- wrAlPeQj_Ns # James Bay - Incomplete - Tessandra Chavez x Tim Milgram
 - Y7-ladC3eAQ # The Kate Bush Story - Running up That Hill (2014 BBC Documentary) [HD]
 - cZZM3bgmXE4 # Posh violinist Lettice Rowbotham gives the Judges something new | Britain&#39;s Got Talent 2014
 - x8eX_fypjfw # SURPRISING high notes in The Voice Kids
