--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -37,6 +37,7 @@
 - corona-keys
 - corruption-keys
 - cortinas-keys
+- covid-keys
 - creative-kitchen-keys
 - crypto-keys
 - cyberwar-keys
@@ -134,6 +135,7 @@
 - ricetm-keys
 - robots-keys
 - sacred-keys
+- scams-keys
 - science-keys
 - sci-fi-keys
 - security-keys
